# git-latexdiff

./: .zipignore  Cargo.toml  README.md
src/: args.rs  config.rs  error.rs  git.rs  item.rs  latex.rs  logger.rs  main.rs  runner.rs  selector.rs  util.rs  wrapper.rs
